--- a/src/app/components/user-pages/landing/landing.component.less
+++ b/src/app/components/user-pages/landing/landing.component.less
@@ -1,303 +1,59 @@
 .main-content {
-    height: auto;
-    float: right;
+    min-height: 100vh;
+    .recommended-live {
+        .live-slide {
+            height: 300px;
+        }
+    }
 }
 
-.img-cropper {
-    width: 30px;
-    height: 30px;
-    position: relative;
-    overflow: hidden;
-    border-radius: 50%;
-    margin-right: 10px;
-}
-
-.img-cropper img {
-    display: inline;
-    margin: 0 auto;
+swiper-container {
+    width: 100%;
     height: 100%;
 }
 
-.live-dot {
-    display: inline-block;
-    height: 8px;
-    width: 8px;
-    border-radius: 4px;
-    background-color: #e21212;
-    margin-right: 3px;
-}
-.name {
-    font-size: 0.8rem;
-    font-weight: bold;
-}
-.game,
-.viewers {
-    font-size: 0.8rem;
-    font-weight: 300;
-}
-.show-link {
-    color: #bf94ff;
-    font-size: 0.7rem;
-}
-.recommended {
-    margin-top: 30px;
-}
-
-.main-content .content h2 {
-    font-weight: 300;
-    font-size: 1.1rem;
-    margin: 15px 0;
-    font-weight: bold;
-    letter-spacing: 1px;
-}
-.content {
-    width: 99%;
-    margin: 10px auto;
-}
-#live-channels {
+swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-}
-.live-channel {
-    width: 19%;
-    padding: 0 15px;
-}
-.live-channel img {
-    width: 100%;
-    height: auto;
-    border-radius: 2%;
-}
-.live-dots {
-    height: 15px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
-    width: 4px;
-}
-.live-dots .rec-live-dot {
-    display: inline-block;
-    height: 4px;
-    width: 4px;
-    border-radius: 50%;
-    background: white;
-}
-.live-lang {
-    font-size: 0.75rem;
-    background: #424246;
-    color: white;
-    border-radius: 8px;
-    padding: 3px 8px;
-    cursor: default;
-}
-.clearfix {
-    overflow: auto;
-}
-.clearfix::after {
-    content: "";
-    clear: both;
-    display: table;
-}
-.offline {
-    filter: grayscale(100%);
-}
-.live-info,
-.categories {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 5px;
-}
-.live-info .img-cropper {
-    height: 40px;
-    width: 40px;
-}
-.live-info .img-cropper img {
-    display: inline;
-    margin: 0 auto;
-    height: 100%;
-    width: auto;
-}
-.live-game,
-.live-user {
-    font-size: 0.8rem;
-}
-.live-title,
-.live-user,
-.live-game {
-    margin-bottom: 5px;
-}
-.live-text {
-    flex-grow: 2;
 }
 
-.special-divider {
-    width: 95%;
-    margin: 30px auto;
-    text-align: center;
-    color: #bf94ff;
-    font-size: 0.9rem;
-    position: relative;
-    border: solid 1px transparent;
-}
-.special-text {
-    background: black;
-    position: absolute;
-    padding: 5px 10px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-.special-divider .special-text i,
-.highlight {
-    color: #bf94ff;
-}
-.special-divider .line {
+swiper-slide img {
+    display: block;
     width: 100%;
-    height: 1px;
-    background: #424246;
-    display: inline-block;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-.category img,
-.category .live-info {
-    width: 93%;
+    height: 100%;
+    object-fit: cover;
 }
 
-.live-image {
-    position: relative;
-}
-.live-icon,
-.live-views {
-    padding: 3px;
-    border-radius: 3px;
-    width: max-content;
-    text-align: center;
-    font-size: 0.8rem;
+.autoplay-progress {
     position: absolute;
-    left: 10px;
-    color: rgb(243, 242, 242);
-}
-.live-icon {
-    background: #e21212;
+    right: 16px;
+    bottom: 16px;
+    z-index: 10;
+    width: 48px;
+    height: 48px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-weight: bold;
-    top: 10px;
-}
-.live-views {
-    background: rgba(0, 0, 0, 0.5);
-    bottom: 10px;
-}
-#featured {
-    margin: auto;
-    position: relative;
-    margin: 20px auto;
-    height: 300px;
-}
-.main {
-    display: flex;
-    width: 900px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 5;
-}
-.main .live-image {
-    width: 50%;
-}
-.main .live-image img {
-    width: 100%;
-    height: 100%;
-}
-.main .featured-info {
-    width: 30%;
-}
-.main .live-lang {
-    width: max-content;
-    margin: 10px 5px 10px 0;
-}
-.featured-info {
-    background-color: #212126;
-    display: flex;
-    flex-direction: column;
-    padding: 10px;
-}
-.header {
-    display: flex;
-}
-.featured-info .header .img-cropper {
-    width: 45px;
-    height: 45px;
-}
-.info-section p {
-    color: #bf94ff;
-}
-.featured-game {
-    font-size: 0.9rem;
-}
-.summary {
-    font-size: 0.9rem;
-    font-weight: 300;
-}
-.tags {
-    display: flex;
-}
-.featured-content {
-    position: relative;
-}
-.left1 .featured-channel,
-.left2 .featured-channel {
-    position: absolute;
-    width: 100px;
-    left: 15px;
-    bottom: 15px;
-}
-.right1 .featured-channel,
-.right2 .featured-channel {
-    position: absolute;
-    width: 100px;
-    right: 15px;
-    bottom: 15px;
-}
-.left2 .featured-gameplay,
-.right2 .featured-gameplay {
-    width: 400px;
-    height: auto;
-}
-.left1 .featured-gameplay,
-.right1 .featured-gameplay {
-    width: 350px;
-    height: auto;
-}
-.left1,
-.left2 {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-600px, -50%);
-    z-index: 4;
-}
-.right1,
-.right2 {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(10px, -50%);
-    z-index: 4;
-}
-.left1 {
-    transform: translate(-750px, -50%);
-    z-index: 3;
-}
-.right1 {
-    transform: translate(200px, -50%);
-    z-index: 3;
+    color: var(--swiper-theme-color);
 }
 
-.thumbnail {
-    height: 160px;
-    width: 300px;
+.autoplay-progress svg {
+    --progress: 0;
+    position: absolute;
+    left: 0;
+    top: 0px;
+    z-index: 10;
+    width: 100%;
+    height: 100%;
+    stroke-width: 4px;
+    stroke: var(--swiper-theme-color);
+    fill: none;
+    stroke-dashoffset: calc(125.6px * (1 - var(--progress)));
+    stroke-dasharray: 125.6;
+    transform: rotate(-90deg);
 }
