--- a/src/app/components/user-pages/user-profile/user-profile.component.html
+++ b/src/app/components/user-pages/user-profile/user-profile.component.html
@@ -62,9 +62,9 @@
                         <div class="col-lg-12">
                             <div>
                                 <h6>Phone number</h6>
-                                <input type="text" pattern="[0-9]+" minlength="10" maxlength="11" pInputText
-                                    class="w-100 rounded-2 p-2 mb-3" placeholder="Enter your Phone number"
-                                    formControlName="userPhoneNumber" />
+                                <input type="text" maxlength="10" pInputText class="w-100 rounded-2 p-2 mb-3"
+                                    placeholder="Enter your Phone number" formControlName="userPhoneNumber"
+                                    pKeyFilter="num" />
                             </div>
                         </div>
                         <div class="col-lg-12">
