--- a/src/app/components/user-pages/cart/cart.component.html
+++ b/src/app/components/user-pages/cart/cart.component.html
@@ -2,50 +2,60 @@
     <h3 class="col-12 cart-header mb-0">My cart</h3>
     <div class="col-12 xl:col-8">
         <div class="card px-6 py-6">
-            <div *ngFor="let shop of cart">
-                <div class="d-flex align-items-center gap-4 my-4">
-                    <p-checkbox [binary]="true" (onChange)="selectItem(item)"></p-checkbox>
-                    <h5 class="my-auto">{{ shop.merchantName }}</h5>
-                </div>
-                <div *ngFor="let item of shop.cartItemDTOList">
-                    <div class="cart-item">
-                        <span style="min-width: 10rem" class="d-flex align-items-center flex-wrap gap-4">
-                            <p-checkbox [(ngModel)]="item.isSelected" [binary]="true"
-                                (onChange)="selectItem(item)"></p-checkbox>
-                            <img [src]="item?.image" width="100" height="100" class="shadow-4 rounded-3" />
-                            <span class="d-flex flex-column" style="max-width: 50%">
-                                <h5 class="mb-0">
-                                    {{ item.name }}
-                                </h5>
-                                <small style="font-size: 12px">{{
-                                    item.listAttributeName.join(", ")
-                                    }}</small>
-                                <span style="width: 14%; min-width: 8rem">
-                                    {{ item.unitPrice | currency : "VND" }}
+            <div *ngIf="cart.length">
+
+                <div *ngFor="let shop of cart">
+                    <div class="d-flex align-items-center gap-4 my-4">
+                        <p-checkbox [binary]="true" (onChange)="selectAll(shop)"
+                            [(ngModel)]="shop.isSelected"></p-checkbox>
+                        <h5 class="my-auto">{{ shop.merchantName }}</h5>
+                    </div>
+                    <div *ngFor="let item of shop.cartItemDTOList">
+                        <div class="cart-item">
+                            <span style="min-width: 10rem" class="d-flex align-items-center flex-wrap gap-4">
+                                <p-checkbox [(ngModel)]="item.isSelected" [binary]="true"
+                                    (onChange)="selectItem(shop,item)"></p-checkbox>
+                                <img [src]="item?.image" width="100" height="100" class="shadow-4 rounded-3" />
+                                <span class="d-flex flex-column" style="max-width: 50%">
+                                    <h5 class="mb-0">
+                                        {{ item.name }}
+                                    </h5>
+                                    <small style="font-size: 12px">{{
+                                        item.listAttributeName.join(", ")
+                                        }}</small>
+                                    <span style="width: 14%; min-width: 8rem">
+                                        {{ item.unitPrice | currency : "VND" }}
+                                    </span>
                                 </span>
                             </span>
-                        </span>
 
-                        <span style="width: 14%; min-width: 10rem" class="num-item">
-                            <app-quantity [quantity]="item.quantity" [min]="1" [max]="item.stockAmount"
-                                (onQuantity)="onChangeQty(item, $event)"></app-quantity>
-                            <button pButton pRipple icon="pi pi-trash"
-                                class="p-button-rounded p-button-danger p-button-text" (click)="
+                            <span style="width: 14%; min-width: 10rem" class="num-item">
+                                <app-quantity [quantity]="item.quantity" [min]="1" [max]="item.stockAmount"
+                                    (onQuantity)="onChangeQty(item, $event)"></app-quantity>
+                                <button pButton pRipple icon="pi pi-trash"
+                                    class="p-button-rounded p-button-danger p-button-text" (click)="
                                     $event.stopPropagation(); removeItem(item)
                                 "></button>
-                        </span>
-                        <!-- <span style="width: 14%; min-width: 10rem">
+                            </span>
+                            <!-- <span style="width: 14%; min-width: 10rem">
                     {{ item.totalItemPrice | currency : "VND" }}
                 </span> -->
+                        </div>
+                        <p-divider></p-divider>
+                    </div>
+                    <div *ngIf="isLogin" class="voucher d-flex gap-4 align-items-center">
+                        <h6>Select Voucher:</h6>
+                        <p-dropdown [options]="listVoucher" optionLabel="name" [(ngModel)]="shop.voucher"
+                            placeholder="Select Voucher" (onChange)="onVoucherSelected(shop)"></p-dropdown>
                     </div>
                     <p-divider></p-divider>
-                </div>
-                <!-- <div class="voucher d-flex gap-4 align-items-center">
-                    <h6>Select Voucher:</h6>
-                    <p-dropdown [options]="listVoucher" optionLabel="name"></p-dropdown>
-                </div>
-                <p-divider></p-divider> -->
 
+                </div>
+            </div>
+            <div *ngIf="!cart.length">
+                <div class="d-flex justify-content-center align-items-center" style="height: 50vh">
+                    <h5>Your cart is empty</h5>
+                </div>
             </div>
         </div>
     </div>
