--- a/src/app/components/user-pages/check-out/check-out.component.html
+++ b/src/app/components/user-pages/check-out/check-out.component.html
@@ -8,7 +8,7 @@
             </span>
             <span>
                 <h6 class="mt-1">Phone</h6>
-                <input class="w-100 ps-2" formControlName="phoneNumber" pInputText pKeyFilter="num" />
+                <input class="w-100 ps-2" formControlName="phoneNumber" pInputText pKeyFilter="num" maxlength="10" />
             </span>
 
             <span class="mt-2">
