--- a/src/app/components/user-pages/landing/landing.component.html
+++ b/src/app/components/user-pages/landing/landing.component.html
@@ -1,15 +1,59 @@
 <div class="main-content">
-    <div class="content">
+
+    <div class="banner position-relative">
+        <div class="banner-content">
+            <h1>Watch live streams and connect with your favorite streamers</h1>
+            <p>Join the community and watch your favorite streamers live</p>
+            <button class="btn btn-primary">Join Now</button>
+        </div>
+        <div class="banner-prod">
+            <swiper-container class="mySwiper" space-between="30" centered-slides="true" autoplay-delay="2500"
+                loop="true" autoplay-disable-on-interaction="false">
+                <swiper-slide *ngFor="let prod of mostProd" class="live-slide cursor-pointer">
+                    <div class="d-flex justify-content-end">
+                        <img src="{{prod.images[0]}}" alt="">
+                        <!-- <h5>{{prod.title}}</h5> -->
+                    </div>
+                </swiper-slide>
+                <div class="autoplay-progress" slot="container-end">
+                    <svg viewBox="0 0 48 48">
+                        <circle cx="24" cy="24" r="20"></circle>
+                    </svg>
+                    <span></span>
+                </div>
+            </swiper-container>
+        </div>
+    </div>
+    <div class="content mt-4">
+
+
+
+        <h2>Recommended product for you</h2>
+        <section class="recommended-live">
+            <swiper-container class="mySwiper" navigation="true" space-between="30" autoplay-delay="3500" rewind="true"
+                autoplay-disable-on-interaction="false" slides-per-view="5">
+                <swiper-slide *ngFor="let item of mostProd" class="live-slide cursor-pointer"
+                    (click)="onProdClick(item.productId)">
+                    <app-product-card class="my-2" [product]="item"></app-product-card>
+                </swiper-slide>
+                <div class="autoplay-progress" slot="container-end">
+                    <svg viewBox="0 0 48 48">
+                        <circle cx="24" cy="24" r="20"></circle>
+                    </svg>
+                    <span></span>
+                </div>
+            </swiper-container>
+
+        </section>
         <h2>Recommended live channels</h2>
         <section class="recommended-live">
-            <swiper-container class="mySwiper" pagination="true" pagination-clickable="true" navigation="true"
-                space-between="30" centered-slides="true" autoplay-delay="2500" rewind="true"
-                autoplay-disable-on-interaction="false">
+            <swiper-container class="mySwiper" navigation="true" space-between="30" autoplay-delay="3500" rewind="true"
+                autoplay-disable-on-interaction="false" slides-per-view="3">
                 <swiper-slide *ngFor="let stream of listStream" class="live-slide cursor-pointer"
                     (click)="onLiveClick(stream)">
-                    <div class="d-flex">
-                        <img src="{{stream.thumbnail}}" alt="">
-                        <h5>{{stream.title}}</h5>
+                    <div class="position-relative h-100 w-100">
+                        <img src="{{stream.thumbnail}}" alt="" class="live-img w-100">
+                        <h5 class="live-title position-absolute mx-auto text-center w-100">{{stream.title}}</h5>
                     </div>
                 </swiper-slide>
                 <div class="autoplay-progress" slot="container-end">
@@ -21,11 +65,5 @@
             </swiper-container>
 
         </section>
-        <div class="special-divider">
-            <div class="line"></div>
-            <div class="special-text">
-                Show More <i class="fas fa-chevron-down"></i>
-            </div>
-        </div>
     </div>
 </div>
