--- a/src/app/components/user-pages/product-detail/product-detail.component.html
+++ b/src/app/components/user-pages/product-detail/product-detail.component.html
@@ -23,9 +23,7 @@
 
                 <h5 class="mt-2">{{ attPrice | number : "1.0-0" }} VND</h5>
                 <p>
-                    This is for description. This is for description. This is
-                    for description. This is for description. This is for
-                    description.
+                    {{product.description}}
                 </p>
                 <div class="size attribute">
                     <h5 class="mb-0 mt-1">
@@ -92,15 +90,7 @@
     <div class="mt-4">
         <p-tabView>
             <p-tabPanel header="Product Details">
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                    do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                    ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                    Duis aute irure dolor in reprehenderit in voluptate velit
-                    esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-                    occaecat cupidatat non proident, sunt in culpa qui officia
-                    deserunt mollit anim id est laborum.
+                <p [innerHTML]="product.detail">
                 </p>
             </p-tabPanel>
             <p-tabPanel header="Rating & Reviews">
