--- a/src/app/components/merchant-pages/product/product.component.html
+++ b/src/app/components/merchant-pages/product/product.component.html
@@ -47,7 +47,7 @@
                     'subCategory.category.name'
                 ]" [paginator]="false" [(selection)]="selectedProducts" selectionMode="multiple" [rowHover]="true"
                 dataKey="id">
-                <ng-template pTemplate="caption">
+                <!-- <ng-template pTemplate="caption">
                     <div class="flex flex-column md:flex-row md:justify-content-between md:align-items-center">
                         <h5 class="m-0">Manage Products</h5>
                         <span class="block mt-2 md:mt-0 p-input-icon-left">
@@ -56,7 +56,7 @@
                                 class="w-full sm:w-auto" />
                         </span>
                     </div>
-                </ng-template>
+                </ng-template> -->
                 <ng-template pTemplate="header">
                     <tr>
                         <!-- <th style="width: 3rem">
