--- a/src/app/components/merchant-pages/admin-live/admin-live.component.html
+++ b/src/app/components/merchant-pages/admin-live/admin-live.component.html
@@ -43,12 +43,12 @@
 
                         <td>
                             <span>
-                                {{ product.merchantName }}
+                                {{ product.title }}
                             </span>
                         </td>
                         <td style="width: 14%; min-width: 8rem">
                             <span class="p-column-title">Created Date</span>
-                            {{ product.createdDate | date }}
+                            {{ product.startTime | date }}
                         </td>
                         <td style="width: 14%; min-width: 10rem">
                             <span class="p-column-title">Phone Number</span>
